--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/engagementapp",
+            "outputPath": "../nodeServer/public",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -48,9 +48,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": [ 
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css" ],
             "scripts": []
           },
           "configurations": {
